force-app/main/default/objects/GiftTransaction/fields/FQS_Donor_Tax_Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Donor_Tax_Acknowledgement_Date__c</fullName>
    <description>The date the gift is treated as having left the donor's control for tax-receipt purposes. Varies by payment channel and local law — postmark date for mailed checks, charge-authorization date for credit-card gifts, delivery date for stock or in-kind gifts. Distinct from Transaction Date (Transaction Completion Date), which is when the gift is fully in the org's hands. Optional for most orgs — leave blank when the org has no operationally meaningful gap between the two dates (typical for low-volume, credit-card-heavy, or jurisdiction-simple orgs).</description>
    <inlineHelpText>The date the donor is credited for tax purposes — postmark for mailed checks, charge date for cards, delivery date for stock. Leave blank if your org treats the Transaction Date as the tax date (fine for most orgs).</inlineHelpText>
    <label>Donor Tax Acknowledgement Date</label>
    <type>Date</type>
</CustomField>