force-app/main/default/objects/GiftTransaction/fields/FQS_Fair_Market_Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>FQS_Fair_Market_Value_Amount__c</fullName>
    <description>Estimated fair market value of the goods, services, or property donated as an in-kind gift. Used for tax receipts (as an estimated FMV line, not an IRS-reportable deduction) and FMV-specific reporting. The donor is responsible for determining the actual tax-deductible value on their own return. For in-kind gifts the FQS convention is: OriginalAmount = 0 (in-kind is not cash flow), NonTaxDeductibleAmount = 0, FMV recorded here, and a GiftSoftCredit with Role = In-Kind Recognition points at the donor so recognition rollups (DonorGiftSummary.TotalSoftCreditsAmount, TotalHardSoftCreditsAmount) reflect the in-kind value without inflating hard-credit cash totals. Blank on non-in-kind gifts.</description>
    <inlineHelpText>Estimated fair market value of the donated goods or services. Used for the tax receipt and reporting only — the donor determines the actual tax-deductible value on their own return.</inlineHelpText>
    <label>Fair Market Value Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>