force-app/main/default/objects/GiftTransaction/fields/FQS_Gift_Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>FQS_Gift_Transaction_Category__c</fullName>
    <description>Classifies the transaction kind. Allowed values: Outright Gift, Pledge Payment, Grant Payment, Fee/Payment.</description>
    <label>Gift Transaction Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Outright Gift</fullName><default>false</default><label>Outright Gift</label></value>
            <value><fullName>Pledge Payment</fullName><default>false</default><label>Pledge Payment</label></value>
            <value><fullName>Grant Payment</fullName><default>false</default><label>Grant Payment</label></value>
            <value><fullName>Fee/Payment</fullName><default>false</default><label>Fee/Payment</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>