force-app/main/default/objects/GiftTransaction/fields/FQS_In_Kind__c.field-meta.xml
<CustomField>
    <fullName>FQS_In_Kind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this transaction is an in-kind (non-cash) gift such as goods, services, or property.</description>
    <label>In-Kind</label>
    <type>Checkbox</type>
</CustomField>