force-app/main/default/objects/GiftTransaction/fields/FQS_Is_Entry_Gift__c.field-meta.xml
<CustomField>
    <fullName>FQS_Is_Entry_Gift__c</fullName>
    <description>Boolean formula that returns TRUE when CurrentAmount meets or exceeds the Entry.One_Time_Min_Amount__c value in FQS_Donor_Grouping custom metadata, OR when the parent GiftCommitment.ExpectedTotalCmtAmount meets or exceeds Entry.Lifetime_Min_Amount__c (installment inheritance — a payment against a large commitment inherits the commitment's grouping). Thresholds are configured via Setup → Custom Metadata Types → FQS Donor Grouping or the FQS Setup screen flow. Changing threshold values recalculates this field across all Gift Transaction records retroactively — no redeployment or batch job required. Reports and dashboards using this field will reflect the new values immediately.</description>
    <formula>CurrentAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Entry.One_Time_Min_Amount__c ||
GiftCommitment.ExpectedTotalCmtAmount >= $CustomMetadata.FQS_Donor_Grouping__mdt.Entry.Lifetime_Min_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated. The field is checked when this gift's amount qualifies for the Entry donor grouping, or when it is an installment payment against an Entry-grouping commitment. Your administrator controls the threshold amounts.</inlineHelpText>
    <label>Is Entry Gift</label>
    <type>Checkbox</type>
</CustomField>