force-app/main/default/objects/GiftTransaction/fields/FQS_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>FQS_Match_Status__c</fullName>
    <description>Tracks the lifecycle of a corporate matching-gift request against this transaction. Values sourced from the FQS_Match_Status GlobalValueSet so the staging GiftEntry mirror and canonical GiftTransaction copy stay in lockstep. Distinct from FQS_Matched__c (boolean, flips true when MatchingEmployerTransactionId is linked): Match Status covers the whole workflow — Eligible (identified as match-eligible), Request Confirmed (submitted to employer), Received (match arrived), Declined (employer refused), N/A (no match expected).</description>
    <inlineHelpText>Where this gift stands in the corporate matching lifecycle. Leave blank or N/A if no match is expected. Complements the boolean Matched field, which only flips true once the matching transaction is linked.</inlineHelpText>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FQS_Match_Status</valueSetName>
    </valueSet>
</CustomField>