force-app/main/default/objects/GiftTransaction/fields/FQS_Matched__c.field-meta.xml
<CustomField>
    <fullName>FQS_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this transaction has an employer or third-party match. When true and GiftType is Individual, the Matching Employer Transactions related list is shown on the record page.</description>
    <label>Matched</label>
    <type>Checkbox</type>
</CustomField>