force-app/main/default/objects/GiftTransaction/fields/FQS_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Processed_Date__c</fullName>
    <description>Date this gift was entered into Salesforce, distinct from the Gift Date (Transaction Completion Date) which records when the donor sent the gift. Set by the FQS Gift Entry Single Launcher; defaults to today on the entry screen. Used for cash-flow and reconciliation reporting where the org needs to know when the transaction was keyed rather than when it was received.</description>
    <inlineHelpText>Date the org keyed this gift into Salesforce. Defaults to today. Different from the Gift Date, which is when the donor originally sent the gift.</inlineHelpText>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>