force-app/main/default/objects/GiftTransaction/fields/FQS_Recurring__c.field-meta.xml
<CustomField>
    <fullName>FQS_Recurring__c</fullName>
    <description>Indicates this transaction is part of a recurring giving series linked to a Gift Commitment.</description>
    <defaultValue>false</defaultValue>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>