force-app/main/default/objects/GiftTransaction/fields/FQS_Restriction_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Restriction_Release_Date__c</fullName>
    <description>Convention: one year past this transaction&apos;s date. On a payment against a commitment, defaults from the parent commitment but is independently writable. See [[seed-release-date-followup]].</description>
    <inlineHelpText>The date restricted funds from this payment become available for their designated purpose or for general use. Leave blank for gifts with no time restriction.</inlineHelpText>
    <label>Restriction Release Date</label>
    <type>Date</type>
</CustomField>