force-app/main/default/objects/GiftTransaction/fields/FQS_Skip_Naming__c.field-meta.xml
<CustomField>
    <fullName>FQS_Skip_Naming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When TRUE, the FQS Auto Name Gift Transaction flow skips this record and leaves Name as-is. Use for imports or integration writes that carry an authoritative external Name.</description>
    <inlineHelpText>Check to prevent the FQS auto-naming flow from overwriting the Name on this Gift Transaction.</inlineHelpText>
    <label>Skip FQS Auto Naming</label>
    <type>Checkbox</type>
</CustomField>