force-app/main/default/objects/GiftTransaction/fields/FQS_Stewardship_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Stewardship_Date__c</fullName>
    <description>Date the stewardship touch was delivered. Written by the FQS_Stewardship_Response flow when Stewardship Status flips to Sent. Manual override is allowed for stewardship performed outside the automated flow (personal note, phone call, in-person). See .planning/fqs-gift-followup-redesign.md.</description>
    <inlineHelpText>Date the follow-up stewardship email or task was delivered. Set automatically by the flow, or manually if stewardship occurred outside Salesforce.</inlineHelpText>
    <label>Stewardship Date</label>
    <type>Date</type>
</CustomField>