force-app/main/default/objects/GiftTransaction/fields/FQS_Stewardship_Status__c.field-meta.xml
<CustomField>
    <fullName>FQS_Stewardship_Status__c</fullName>
    <description>Tracks whether a post-acknowledgement stewardship touch has been delivered for this gift. Stewardship is separate from acknowledgement: acknowledgement confirms the gift was received; stewardship is a follow-up outreach to deepen donor connection. Written by the FQS_Stewardship_Response flow. See .planning/fqs-gift-followup-redesign.md.</description>
    <inlineHelpText>Status of the follow-up stewardship touch (email or task) for this gift. Set to "Don't Send" to suppress automated stewardship. Distinct from Acknowledgement Status, which tracks the initial thank-you.</inlineHelpText>
    <label>Stewardship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Don't Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>