force-app/main/default/objects/GiftTransaction/fields/FQS_Tax_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>FQS_Tax_Receipt_Date__c</fullName>
    <description>Date the year-end tax receipt was issued to the donor for this gift. Manual field — year-end tax receipting is out of scope for FQS automation. Standard NPC batch tax-receipt capabilities own the delivery mechanism; this field records the outcome for reporting and audit. Complements the standard Tax Receipt Status picklist. See .planning/fqs-gift-followup-redesign.md.</description>
    <inlineHelpText>Date this gift's tax receipt was issued to the donor. Enter manually or via a bulk update after your annual tax-receipt run.</inlineHelpText>
    <label>Tax Receipt Date</label>
    <type>Date</type>
</CustomField>