force-app/main/default/objects/GiftTransaction/fields/FQS_Transaction_Date_LongForm__c.field-meta.xml
<CustomField>
    <fullName>FQS_Transaction_Date_LongForm__c</fullName>
    <description>Long-form text representation of TransactionDate with the month spelled out (e.g. &quot;August 14, 2026&quot;). Used by the FQS email templates so the tax-record line reads formally in plain-text email regardless of the recipient's locale. Salesforce Date-typed merge fields render locale-dependent short-form dates in email, which is inconsistent for tax-facing copy.</description>
    <formula>CASE(MONTH(TransactionDate),
    1,  &quot;January&quot;,
    2,  &quot;February&quot;,
    3,  &quot;March&quot;,
    4,  &quot;April&quot;,
    5,  &quot;May&quot;,
    6,  &quot;June&quot;,
    7,  &quot;July&quot;,
    8,  &quot;August&quot;,
    9,  &quot;September&quot;,
    10, &quot;October&quot;,
    11, &quot;November&quot;,
    12, &quot;December&quot;,
    &quot;&quot;
) &amp; &quot; &quot; &amp; TEXT(DAY(TransactionDate)) &amp; &quot;, &quot; &amp; TEXT(YEAR(TransactionDate))</formula>
    <inlineHelpText>Long-form date used by the FQS email templates. Derived from Transaction Date.</inlineHelpText>
    <label>Transaction Date (Long Form)</label>
    <type>Text</type>
</CustomField>