force-app/main/default/objects/GiftTransaction/listViews/FQS_Failed_Canceled_7d.listView-meta.xml
<ListView>
    <fullName>FQS_Failed_Canceled_7d</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <columns>PaymentMethod</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Failed,Canceled</value>
    </filters>
    <filters>
        <field>TransactionDate</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Failed / Canceled — Last 7 Days</label>
</ListView>