force-app/main/default/objects/GiftTransaction/listViews/FQS_Grant_Payments.listView-meta.xml
<ListView>
    <fullName>FQS_Grant_Payments</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>GiftCommitment</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Gift_Transaction_Category__c</field>
        <operation>equals</operation>
        <value>Grant Payment</value>
    </filters>
    <label>Grant Payments</label>
</ListView>