force-app/main/default/objects/GiftTransaction/listViews/FQS_Outright_Gifts.listView-meta.xml
<ListView>
    <fullName>FQS_Outright_Gifts</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Gift_Transaction_Category__c</field>
        <operation>equals</operation>
        <value>Outright Gift</value>
    </filters>
    <label>Outright Gifts</label>
</ListView>