force-app/main/default/objects/GiftTransaction/listViews/FQS_To_Be_Acknowledged.listView-meta.xml
<ListView>
    <fullName>FQS_To_Be_Acknowledged</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>AcknowledgementStatus</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcknowledgementStatus</field>
        <operation>equals</operation>
        <value>To Be Sent</value>
    </filters>
    <filters>
        <field>TransactionDate</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>To Be Acknowledged</label>
</ListView>