force-app/main/default/objects/GiftTransaction/listViews/FQS_Transaction_Category_Other.listView-meta.xml
<ListView>
    <fullName>FQS_Transaction_Category_Other</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Gift_Transaction_Category__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <label>Transaction Category - Other</label>
</ListView>