force-app/main/default/objects/GiftTransaction/listViews/In_Kind_Gifts.listView-meta.xml
<ListView>
    <fullName>In_Kind_Gifts</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_In_Kind__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>In Kind Gifts</label>
</ListView>