force-app/main/default/objects/GiftTransaction/listViews/To_Be_Stewarded.listView-meta.xml
<ListView>
    <fullName>To_Be_Stewarded</fullName>
    <columns>Name</columns>
    <columns>Donor</columns>
    <columns>TransactionDate</columns>
    <columns>CurrentAmount</columns>
    <columns>AcknowledgementStatus</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FQS_Stewardship_Status__c</field>
        <operation>equals</operation>
        <value>To Be Sent</value>
    </filters>
    <filters>
        <field>TransactionDate</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>To Be Stewarded</label>
</ListView>